# care_kutumba

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/care_kutumba/: __init__.py  apps.py  settings.py  signals.py  urls.py
src/care_kutumba/api/: specs.py  viewsets.py
src/care_kutumba/migrations/: 0001_initial.py  0002_kutumbapatientlink.py
src/care_kutumba/models/: __init__.py  care_kutumba_model.py  patient_link.py  request_log.py
src/care_kutumba/service/: __init__.py  crypto.py  kutumba.py  request.py
tests/: __init__.py  test_care_hello.py
